@@ -1,3 +1,8 @@
+2009-11-12 font_manager.py should no longer cause EINTR on Python 2.6
+           (but will on the 2.5 version of subprocess). Also the
+           fc-list command in that file was fixed so now it should
+           actually find the list of fontconfig fonts. - JKS
+
 2009-11-10 Single images, and all images in renderers with
            option_image_nocomposite (i.e. agg, macosx and the svg
            backend when rcParams['svg.image_noscale'] is True), are
